# my_knowlage

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  start.sh
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605150001_initial_database_models.py  202606180001_youtube_source_subscription_video.py  202606230001_document_is_unread.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: database.py  file_storage.py  graph_store.py  models.py  repositories.py  vector_store.py
backend/app/schemas/: documents.py  entities.py  graph.py  rag.py  research.py  youtube.py
backend/app/services/: document_parsers.py  document_service.py  embeddings.py  (+24 more)
backend/scripts/: seed_dev.py
backend/tests/: test_asr_fallback.py  test_chapters.py  test_database.py  test_document_import.py  test_entity_cleanup.py  test_entity_extraction.py  test_entity_merge.py  test_entity_resolution.py  test_entity_translation.py  test_extraction_pipeline.py  test_extraction_prompt.py  test_graph_service.py  test_graph_sync_integration.py  test_health.py  test_map_reduce.py  test_rag_search.py  test_research_agent.py  test_scheduler.py  test_structured_output.py  test_subscription_service.py  test_summary_retry.py  test_summary_service.py  test_task_worker.py  test_translation.py  test_web_search.py  test_youtube_api.py  test_youtube_data_models.py  test_youtube_fetch_chain.py  test_youtube_orchestrator.py
(+105 files in other folders)
